debug/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> funclist
Rule 3     program -> empty
Rule 4     funclist -> funcdef funclist1
Rule 5     funclist1 -> DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE funclist1
Rule 6     funclist1 -> empty
Rule 7     funcdef -> DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE
Rule 8     types -> INT
Rule 9     types -> FLOAT
Rule 10    types -> STRING
Rule 11    paramlist -> STRING listdcl IDENT paramlist1
Rule 12    paramlist -> FLOAT listdcl IDENT paramlist1
Rule 13    paramlist -> INT listdcl IDENT paramlist1
Rule 14    paramlist -> empty
Rule 15    paramlist1 -> COMMA paramlist
Rule 16    paramlist1 -> empty
Rule 17    listdcl -> LBRACKET RBRACKET listdcl
Rule 18    listdcl -> empty
Rule 19    statement -> vardecl SEMICOLON
Rule 20    statement -> atribstat SEMICOLON
Rule 21    statement -> printstat SEMICOLON
Rule 22    statement -> readstat SEMICOLON
Rule 23    statement -> returnstat SEMICOLON
Rule 24    statement -> ifstat
Rule 25    statement -> forstat
Rule 26    statement -> whilestat
Rule 27    statement -> LBRACE statelist RBRACE
Rule 28    statement -> BREAK SEMICOLON
Rule 29    statement -> SEMICOLON
Rule 30    statement -> funccall SEMICOLON
Rule 31    vardecl -> INT IDENT vardecl1
Rule 32    vardecl -> FLOAT IDENT vardecl1
Rule 33    vardecl -> STRING IDENT vardecl1
Rule 34    vardecl1 -> LBRACKET numexpression RBRACKET vardecl1
Rule 35    vardecl1 -> empty
Rule 36    atribstat -> IDENT lvalue1 atribstat1 ASSIGN atribstat2
Rule 37    atribstat1 -> LBRACKET numexpression RBRACKET atribstat1
Rule 38    atribstat1 -> empty
Rule 39    atribstat2 -> expression
Rule 40    atribstat2 -> allocexpression
Rule 41    atribstat2 -> funccall
Rule 42    funccall -> IDENT LPAREN paramlistcall RPAREN
Rule 43    paramlistcall -> factor paramlistcall1 paramlistcall2
Rule 44    paramlistcall -> empty
Rule 45    paramlistcall1 -> LBRACKET numexpression RBRACKET paramlistcall1
Rule 46    paramlistcall1 -> empty
Rule 47    paramlistcall2 -> COMMA paramlistcall
Rule 48    paramlistcall2 -> empty
Rule 49    printstat -> PRINT expression
Rule 50    readstat -> READ expression
Rule 51    returnstat -> RETURN returnstat1
Rule 52    returnstat1 -> IDENT
Rule 53    returnstat1 -> expression
Rule 54    returnstat1 -> empty
Rule 55    ifstat -> IF LPAREN expression RPAREN statement ifstat1
Rule 56    ifstat1 -> ELSE statement
Rule 57    ifstat1 -> empty
Rule 58    forstat -> FOR LPAREN forstat1 SEMICOLON forstat2 SEMICOLON forstat1 RPAREN statement
Rule 59    forstat1 -> IDENT lvalue1 atribstat1 ASSIGN atribstat2
Rule 60    forstat1 -> empty
Rule 61    forstat2 -> expression
Rule 62    forstat2 -> empty
Rule 63    whilestat -> WHILE LPAREN expression RPAREN statement
Rule 64    statelist -> INT listdcl IDENT vardecl1 SEMICOLON statelist1
Rule 65    statelist -> FLOAT listdcl IDENT vardecl1 SEMICOLON statelist1
Rule 66    statelist -> STRING listdcl IDENT vardecl1 SEMICOLON statelist1
Rule 67    statelist -> IDENT lvalue1 atribstat1 ASSIGN atribstat2 SEMICOLON statelist1
Rule 68    statelist -> PRINT expression SEMICOLON statelist1
Rule 69    statelist -> READ IDENT lvalue1 SEMICOLON statelist1
Rule 70    statelist -> RETURN returnstat1 SEMICOLON statelist1
Rule 71    statelist -> IF LPAREN expression RPAREN statement ifstat1 statelist1
Rule 72    statelist -> FOR LPAREN forstat1 SEMICOLON forstat2 SEMICOLON forstat1 RPAREN statement statelist1
Rule 73    statelist -> WHILE LPAREN expression RPAREN statement statelist1
Rule 74    statelist -> LBRACE statelist RBRACE statelist1
Rule 75    statelist -> BREAK SEMICOLON statelist1
Rule 76    statelist -> SEMICOLON statelist1
Rule 77    statelist -> IDENT LPAREN paramlistcall RPAREN SEMICOLON statelist1
Rule 78    statelist1 -> INT listdcl IDENT vardecl1 SEMICOLON statelist1
Rule 79    statelist1 -> FLOAT listdcl IDENT vardecl1 SEMICOLON statelist1
Rule 80    statelist1 -> STRING listdcl IDENT vardecl1 SEMICOLON statelist1
Rule 81    statelist1 -> IDENT lvalue1 atribstat1 ASSIGN atribstat2 SEMICOLON statelist1
Rule 82    statelist1 -> PRINT expression SEMICOLON statelist1
Rule 83    statelist1 -> READ IDENT lvalue1 SEMICOLON statelist1
Rule 84    statelist1 -> RETURN returnstat1 SEMICOLON statelist1
Rule 85    statelist1 -> IF LPAREN expression RPAREN statement ifstat1 statelist1
Rule 86    statelist1 -> FOR LPAREN forstat1 SEMICOLON forstat2 SEMICOLON forstat1 RPAREN statement statelist1
Rule 87    statelist1 -> WHILE LPAREN expression RPAREN statement statelist1
Rule 88    statelist1 -> LBRACE statelist RBRACE statelist1
Rule 89    statelist1 -> BREAK SEMICOLON statelist1
Rule 90    statelist1 -> SEMICOLON statelist1
Rule 91    statelist1 -> IDENT LPAREN paramlistcall RPAREN SEMICOLON statelist1
Rule 92    statelist1 -> empty
Rule 93    allocexpression -> NEW types LBRACKET numexpression RBRACKET allocexpression1
Rule 94    allocexpression1 -> LBRACKET numexpression RBRACKET allocexpression1
Rule 95    allocexpression1 -> empty
Rule 96    expression -> numexpression expression1
Rule 97    expression1 -> compoperator numexpression
Rule 98    expression1 -> empty
Rule 99    compoperator -> GT
Rule 100   compoperator -> LT
Rule 101   compoperator -> GE
Rule 102   compoperator -> LE
Rule 103   compoperator -> EQ
Rule 104   compoperator -> NEQ
Rule 105   numexpression -> term numexpression1
Rule 106   numexpression1 -> addsub term
Rule 107   numexpression1 -> term
Rule 108   numexpression1 -> empty
Rule 109   addsub -> PLUS
Rule 110   addsub -> MINUS
Rule 111   term -> unaryexpr term1
Rule 112   term1 -> multdiv unaryexpr term1
Rule 113   term1 -> empty
Rule 114   multdiv -> MULTIPLY
Rule 115   multdiv -> DIVIDE
Rule 116   multdiv -> REM
Rule 117   unaryexpr -> addsub factor
Rule 118   unaryexpr -> factor
Rule 119   factor -> int_constant
Rule 120   factor -> float_constant
Rule 121   factor -> string_constant
Rule 122   factor -> null_constant
Rule 123   factor -> IDENT lvalue1
Rule 124   factor -> LPAREN numexpression RPAREN
Rule 125   lvalue1 -> LBRACKET numexpression RBRACKET lvalue1
Rule 126   lvalue1 -> empty
Rule 127   empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 36 59 67 81
BREAK                : 28 75 89
COMMA                : 15 47
DEF                  : 5 7
DIVIDE               : 115
ELSE                 : 56
EQ                   : 103
FLOAT                : 9 12 32 65 79
FOR                  : 58 72 86
GE                   : 101
GT                   : 99
IDENT                : 5 7 11 12 13 31 32 33 36 42 52 59 64 65 66 67 69 77 78 79 80 81 83 91 123
IF                   : 55 71 85
INT                  : 8 13 31 64 78
LBRACE               : 5 7 27 74 88
LBRACKET             : 17 34 37 45 93 94 125
LE                   : 102
LPAREN               : 5 7 42 55 58 63 71 72 73 77 85 86 87 91 124
LT                   : 100
MINUS                : 110
MULTIPLY             : 114
NEQ                  : 104
NEW                  : 93
PLUS                 : 109
PRINT                : 49 68 82
RBRACE               : 5 7 27 74 88
RBRACKET             : 17 34 37 45 93 94 125
READ                 : 50 69 83
REM                  : 116
RETURN               : 51 70 84
RPAREN               : 5 7 42 55 58 63 71 72 73 77 85 86 87 91 124
SEMICOLON            : 19 20 21 22 23 28 29 30 58 58 64 65 66 67 68 69 70 72 72 75 76 77 78 79 80 81 82 83 84 86 86 89 90 91
STRING               : 10 11 33 66 80
WHILE                : 63 73 87
error                : 
float_constant       : 120
int_constant         : 119
null_constant        : 122
string_constant      : 121

Nonterminals, with rules where they appear

addsub               : 106 117
allocexpression      : 40
allocexpression1     : 93 94
atribstat            : 20
atribstat1           : 36 37 59 67 81
atribstat2           : 36 59 67 81
compoperator         : 97
empty                : 3 6 14 16 18 35 38 44 46 48 54 57 60 62 92 95 98 108 113 126
expression           : 39 49 50 53 55 61 63 68 71 73 82 85 87
expression1          : 96
factor               : 43 117 118
forstat              : 25
forstat1             : 58 58 72 72 86 86
forstat2             : 58 72 86
funccall             : 30 41
funcdef              : 4
funclist             : 2
funclist1            : 4 5
ifstat               : 24
ifstat1              : 55 71 85
listdcl              : 11 12 13 17 64 65 66 78 79 80
lvalue1              : 36 59 67 69 81 83 123 125
multdiv              : 112
numexpression        : 34 37 45 93 94 96 97 124 125
numexpression1       : 105
paramlist            : 5 7 15
paramlist1           : 11 12 13
paramlistcall        : 42 47 77 91
paramlistcall1       : 43 45
paramlistcall2       : 43
printstat            : 21
program              : 0
readstat             : 22
returnstat           : 23
returnstat1          : 51 70 84
statelist            : 5 7 27 74 88
statelist1           : 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
statement            : 1 55 56 58 63 71 72 73 85 86 87
term                 : 105 106 107
term1                : 111 112
types                : 93
unaryexpr            : 111 112
vardecl              : 19
vardecl1             : 31 32 33 34 64 65 66 78 79 80
whilestat            : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . funclist
    (3) program -> . empty
    (19) statement -> . vardecl SEMICOLON
    (20) statement -> . atribstat SEMICOLON
    (21) statement -> . printstat SEMICOLON
    (22) statement -> . readstat SEMICOLON
    (23) statement -> . returnstat SEMICOLON
    (24) statement -> . ifstat
    (25) statement -> . forstat
    (26) statement -> . whilestat
    (27) statement -> . LBRACE statelist RBRACE
    (28) statement -> . BREAK SEMICOLON
    (29) statement -> . SEMICOLON
    (30) statement -> . funccall SEMICOLON
    (4) funclist -> . funcdef funclist1
    (127) empty -> .
    (31) vardecl -> . INT IDENT vardecl1
    (32) vardecl -> . FLOAT IDENT vardecl1
    (33) vardecl -> . STRING IDENT vardecl1
    (36) atribstat -> . IDENT lvalue1 atribstat1 ASSIGN atribstat2
    (49) printstat -> . PRINT expression
    (50) readstat -> . READ expression
    (51) returnstat -> . RETURN returnstat1
    (55) ifstat -> . IF LPAREN expression RPAREN statement ifstat1
    (58) forstat -> . FOR LPAREN forstat1 SEMICOLON forstat2 SEMICOLON forstat1 RPAREN statement
    (63) whilestat -> . WHILE LPAREN expression RPAREN statement
    (42) funccall -> . IDENT LPAREN paramlistcall RPAREN
    (7) funcdef -> . DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE

    LBRACE          shift and go to state 14
    BREAK           shift and go to state 15
    SEMICOLON       shift and go to state 6
    $end            reduce using rule 127 (empty -> .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 20
    STRING          shift and go to state 21
    IDENT           shift and go to state 19
    PRINT           shift and go to state 22
    READ            shift and go to state 23
    RETURN          shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    DEF             shift and go to state 28

    program                        shift and go to state 1
    statement                      shift and go to state 2
    funclist                       shift and go to state 3
    empty                          shift and go to state 4
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    whilestat                      shift and go to state 13
    funccall                       shift and go to state 16
    funcdef                        shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) program -> funclist .

    $end            reduce using rule 2 (program -> funclist .)


state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (19) statement -> vardecl . SEMICOLON

    SEMICOLON       shift and go to state 29


state 6

    (29) statement -> SEMICOLON .

    $end            reduce using rule 29 (statement -> SEMICOLON .)
    ELSE            reduce using rule 29 (statement -> SEMICOLON .)
    INT             reduce using rule 29 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 29 (statement -> SEMICOLON .)
    STRING          reduce using rule 29 (statement -> SEMICOLON .)
    IDENT           reduce using rule 29 (statement -> SEMICOLON .)
    PRINT           reduce using rule 29 (statement -> SEMICOLON .)
    READ            reduce using rule 29 (statement -> SEMICOLON .)
    RETURN          reduce using rule 29 (statement -> SEMICOLON .)
    IF              reduce using rule 29 (statement -> SEMICOLON .)
    FOR             reduce using rule 29 (statement -> SEMICOLON .)
    WHILE           reduce using rule 29 (statement -> SEMICOLON .)
    LBRACE          reduce using rule 29 (statement -> SEMICOLON .)
    BREAK           reduce using rule 29 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 29 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 29 (statement -> SEMICOLON .)


state 7

    (20) statement -> atribstat . SEMICOLON

    SEMICOLON       shift and go to state 30


state 8

    (21) statement -> printstat . SEMICOLON

    SEMICOLON       shift and go to state 31


state 9

    (22) statement -> readstat . SEMICOLON

    SEMICOLON       shift and go to state 32


state 10

    (23) statement -> returnstat . SEMICOLON

    SEMICOLON       shift and go to state 33


state 11

    (24) statement -> ifstat .

    $end            reduce using rule 24 (statement -> ifstat .)
    ELSE            reduce using rule 24 (statement -> ifstat .)
    INT             reduce using rule 24 (statement -> ifstat .)
    FLOAT           reduce using rule 24 (statement -> ifstat .)
    STRING          reduce using rule 24 (statement -> ifstat .)
    IDENT           reduce using rule 24 (statement -> ifstat .)
    PRINT           reduce using rule 24 (statement -> ifstat .)
    READ            reduce using rule 24 (statement -> ifstat .)
    RETURN          reduce using rule 24 (statement -> ifstat .)
    IF              reduce using rule 24 (statement -> ifstat .)
    FOR             reduce using rule 24 (statement -> ifstat .)
    WHILE           reduce using rule 24 (statement -> ifstat .)
    LBRACE          reduce using rule 24 (statement -> ifstat .)
    BREAK           reduce using rule 24 (statement -> ifstat .)
    SEMICOLON       reduce using rule 24 (statement -> ifstat .)
    RBRACE          reduce using rule 24 (statement -> ifstat .)


state 12

    (25) statement -> forstat .

    $end            reduce using rule 25 (statement -> forstat .)
    ELSE            reduce using rule 25 (statement -> forstat .)
    INT             reduce using rule 25 (statement -> forstat .)
    FLOAT           reduce using rule 25 (statement -> forstat .)
    STRING          reduce using rule 25 (statement -> forstat .)
    IDENT           reduce using rule 25 (statement -> forstat .)
    PRINT           reduce using rule 25 (statement -> forstat .)
    READ            reduce using rule 25 (statement -> forstat .)
    RETURN          reduce using rule 25 (statement -> forstat .)
    IF              reduce using rule 25 (statement -> forstat .)
    FOR             reduce using rule 25 (statement -> forstat .)
    WHILE           reduce using rule 25 (statement -> forstat .)
    LBRACE          reduce using rule 25 (statement -> forstat .)
    BREAK           reduce using rule 25 (statement -> forstat .)
    SEMICOLON       reduce using rule 25 (statement -> forstat .)
    RBRACE          reduce using rule 25 (statement -> forstat .)


state 13

    (26) statement -> whilestat .

    $end            reduce using rule 26 (statement -> whilestat .)
    ELSE            reduce using rule 26 (statement -> whilestat .)
    INT             reduce using rule 26 (statement -> whilestat .)
    FLOAT           reduce using rule 26 (statement -> whilestat .)
    STRING          reduce using rule 26 (statement -> whilestat .)
    IDENT           reduce using rule 26 (statement -> whilestat .)
    PRINT           reduce using rule 26 (statement -> whilestat .)
    READ            reduce using rule 26 (statement -> whilestat .)
    RETURN          reduce using rule 26 (statement -> whilestat .)
    IF              reduce using rule 26 (statement -> whilestat .)
    FOR             reduce using rule 26 (statement -> whilestat .)
    WHILE           reduce using rule 26 (statement -> whilestat .)
    LBRACE          reduce using rule 26 (statement -> whilestat .)
    BREAK           reduce using rule 26 (statement -> whilestat .)
    SEMICOLON       reduce using rule 26 (statement -> whilestat .)
    RBRACE          reduce using rule 26 (statement -> whilestat .)


state 14

    (27) statement -> LBRACE . statelist RBRACE
    (64) statelist -> . INT listdcl IDENT vardecl1 SEMICOLON statelist1
    (65) statelist -> . FLOAT listdcl IDENT vardecl1 SEMICOLON statelist1
    (66) statelist -> . STRING listdcl IDENT vardecl1 SEMICOLON statelist1
    (67) statelist -> . IDENT lvalue1 atribstat1 ASSIGN atribstat2 SEMICOLON statelist1
    (68) statelist -> . PRINT expression SEMICOLON statelist1
    (69) statelist -> . READ IDENT lvalue1 SEMICOLON statelist1
    (70) statelist -> . RETURN returnstat1 SEMICOLON statelist1
    (71) statelist -> . IF LPAREN expression RPAREN statement ifstat1 statelist1
    (72) statelist -> . FOR LPAREN forstat1 SEMICOLON forstat2 SEMICOLON forstat1 RPAREN statement statelist1
    (73) statelist -> . WHILE LPAREN expression RPAREN statement statelist1
    (74) statelist -> . LBRACE statelist RBRACE statelist1
    (75) statelist -> . BREAK SEMICOLON statelist1
    (76) statelist -> . SEMICOLON statelist1
    (77) statelist -> . IDENT LPAREN paramlistcall RPAREN SEMICOLON statelist1

    INT             shift and go to state 36
    FLOAT           shift and go to state 39
    STRING          shift and go to state 40
    IDENT           shift and go to state 37
    PRINT           shift and go to state 41
    READ            shift and go to state 42
    RETURN          shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    LBRACE          shift and go to state 34
    BREAK           shift and go to state 47
    SEMICOLON       shift and go to state 38

    statelist                      shift and go to state 35

state 15

    (28) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 48


state 16

    (30) statement -> funccall . SEMICOLON

    SEMICOLON       shift and go to state 49


state 17

    (4) funclist -> funcdef . funclist1
    (5) funclist1 -> . DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE funclist1
    (6) funclist1 -> . empty
    (127) empty -> .

    DEF             shift and go to state 51
    $end            reduce using rule 127 (empty -> .)

    funclist1                      shift and go to state 50
    empty                          shift and go to state 52

state 18

    (31) vardecl -> INT . IDENT vardecl1

    IDENT           shift and go to state 53


state 19

    (36) atribstat -> IDENT . lvalue1 atribstat1 ASSIGN atribstat2
    (42) funccall -> IDENT . LPAREN paramlistcall RPAREN
    (125) lvalue1 -> . LBRACKET numexpression RBRACKET lvalue1
    (126) lvalue1 -> . empty
    (127) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LPAREN          shift and go to state 55
    LBRACKET        shift and go to state 56
    ASSIGN          reduce using rule 127 (empty -> .)

  ! LBRACKET        [ reduce using rule 127 (empty -> .) ]

    lvalue1                        shift and go to state 54
    empty                          shift and go to state 57

state 20

    (32) vardecl -> FLOAT . IDENT vardecl1

    IDENT           shift and go to state 58


state 21

    (33) vardecl -> STRING . IDENT vardecl1

    IDENT           shift and go to state 59


state 22
